--- a/index.html
+++ b/index.html
@@ -15,57 +15,57 @@
     <section class="header">
         <header>
             <div class="logo__container">
-              <img src="/images/logo.PNG" alt="Udemy Logo" />
+              <img src="./images/logo.PNG" alt="Udemy Logo" />
             </div>
               <div class="dropdown__one">
                   <p>Categories</p>
                   <div class="dropdown__one__content">
                     <span>
                         <p>Development</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>Business</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>Finance & Accounting</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>IT & Software</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>Office Productivity</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>Personal Development</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>Design</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>Marketing</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>
                             Lifestyle</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     <span>
                         <p>Photography & Video</p>
-                        <img src="/images/arrow-right.png" alt="">
+                        <img src="./images/arrow-right.png" alt="">
                     </span>
                     </div>
               </div>
               </div>
               <div class="search">
-                  <img src="/images/search.png" alt="">
+                  <img src="./images/search.png" alt="">
                   <input type="search" name="" id="" placeholder="Search for anything">
               </div>
               <div class="dropdown__two">
@@ -89,7 +89,7 @@
               <div class="auth__btns">
                 <button>Log in</button>
                 <button>Sign Up</button>
-                <button><img src="/images/web.png" alt=""></button>
+                <button><img src="./images/web.png" alt=""></button>
               </div>
           </header>
     </section>
