--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="auth__btns">
                 <button>Log in</button>
                 <button>Sign Up</button>
-                <button><img src="./images/web.png" alt=""></button>
+                <button><img src="./web.png" alt=""></button>
               </div>
           </header>
     </section>
