--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="header">
         <header>
             <div class="logo__container">
-              <img src="./images/logo.PNG" alt="Udemy Logo" />
+              <img src="./images/logo.png" alt="Udemy Logo" />
             </div>
               <div class="dropdown__one">
                   <p>Categories</p>
@@ -89,7 +89,7 @@
               <div class="auth__btns">
                 <button>Log in</button>
                 <button>Sign Up</button>
-                <button><img src="./web.png" alt=""></button>
+                <button><img src="./images/web.png" alt=""></button>
               </div>
           </header>
     </section>
